Bug 23999 - SYMBOL_LANGUAGE assertion failure on AIX
Summary: SYMBOL_LANGUAGE assertion failure on AIX
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: gdb (show other bugs)
Version: 8.2
: P2 normal
Target Milestone: 8.2.1
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-17 11:39 UTC by sangamesh
Modified: 2018-12-19 12:18 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sangamesh 2018-12-17 11:39:24 UTC
Lot of gdb testcases are failing due assertion failures on AIX with the 
error below. 

(gdb) br main
Breakpoint 1 at 0x1000075c: file 
/home/gdb_build/binutils-gdb/gdb/testsuite/gdb.base/savedregs.c, line 67.
(gdb) r
Starting program: 
/home/gdb_build/binutils-gdb/gdb/testsuite/outputs/gdb.base/savedregs/savedregs 


Breakpoint 1, main ()
    at /home/gdb_build/binutils-gdb/gdb/testsuite/gdb.base/savedregs.c:67
67        signal (SIGILL, catcher);
(gdb) s
dictionary.c:690: internal-error: void insert_symbol_hashed(dictionary*, 
symbol*): Assertion `SYMBOL_LANGUAGE (sym) == DICT_LANGUAGE 
(dict)->la_language' failed.
A problem internal to GDB has been detected,
further debugging may prove unreliable.
Quit this debugging session? (y or n) y


This error seems to be happening after the fix 
https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;a=commit;h=5ffa0793690b42b2a0c1c21dbb5e64634e58fa00
Comment 2 Sourceware Commits 2018-12-19 10:35:30 UTC
The gdb-8.2-branch branch has been updated by Sangamesh Mallayya <sangameshs@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=efa138468817d1d26d1a57c0c772793f31908064

commit efa138468817d1d26d1a57c0c772793f31908064
Author: Sangamesh Mallayya <sangamesh.swamy@in.ibm.com>
Date:   Fri Oct 26 15:31:36 2018 +0530

    Fix SYMBOL_LANGUAGE assertion failure on AIX.
    
    PR gdb/23999
    * xcoffread.c (read_xcoff_symtab): Pass deduced language to
    symtab_start instead of always using language_unknown.
Comment 3 sangamesh 2018-12-19 12:18:38 UTC
Changes have been backported.