Fix SYMBOL_LANGUAGE assertion failure on AIX.

PR gdb/23999
* xcoffread.c (read_xcoff_symtab): Pass deduced language to
symtab_start instead of always using language_unknown.